--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
   "type": "module",
   "workspaces": [
     "src/ai-tutor-frontend"
-  ]
+  ],
+  "dependencies": {
+    "@dfinity/agent": "^1.2.0",
+    "@dfinity/assets": "^1.2.0",
+    "@dfinity/identity": "^1.2.0",
+    "@dfinity/principal": "^1.2.0"
+  }
 }
